--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-
-spring.datasource.url = jdbc:mysql://localhost:3306/bank_application_db
-spring.datasource.username = root
-spring.datasource.password = robeilaregawi
-
-server.port=8082
-# ===============================
-# = JPA / HIBERNATE
-# ===============================
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-
-logging.level.root=ERROR
-logging.level.org.springframework=ERROR
+#
+#spring.datasource.url = jdbc:mysql://localhost:3306/bank_application_db
+#spring.datasource.username = root
+#spring.datasource.password = robeilaregawi
+#
+#server.port=8082
+## ===============================
+## = JPA / HIBERNATE
+## ===============================
+#spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+#
+#logging.level.root=ERROR
+#logging.level.org.springframework=ERROR
