updating to web appication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,10 @@
 #spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 #
-#logging.level.root=ERROR
-#logging.level.org.springframework=ERROR
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=bank_db
+server.port=2023
+
+logging.level.root=ERROR
+logging.level.org.springframework=ERROR
