--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,45 @@
+spring.datasource.url = jdbc:mysql://localhost:3306/bank_application_db
+spring.datasource.username = root
+spring.datasource.password = robeilaregawi
 
-#spring.datasource.url = jdbc:mysql://localhost:3306/bank_application_db
-#spring.datasource.username = root
-#spring.datasource.password = robeilaregawi
-#
-#server.port=8082
-## ===============================
-## = JPA / HIBERNATE
-## ===============================
-#spring.jpa.show-sql = true
-#spring.jpa.hibernate.ddl-auto = create
-#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+server.port=8080
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=bank_db
-server.port=2023
+
+#spring.activemq.broker-url=tcp://localhost:61616
+#spring.activemq.user=admin
+#spring.activemq.password=admin
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id= gid
+spring.kafka.consumer.auto-offset-reset= earliest
+spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
+
+# logging
+logging.file.path = /
+logging.file.name = log.txt
+logging.level.bank.service.AccountService= info
+#logging.level.org.springframework=info
+
+# for email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=robeilaregawi1@gmail.com
+spring.mail.password=dkmzfknmayylfllw
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+management.endpoint.health.show-details= always
+management.endpoints.web.exposure.include=*
 
 logging.level.root=ERROR
 logging.level.org.springframework=ERROR
